fix icon not showing bug

--- a/app/assets/css/conflict.css
+++ b/app/assets/css/conflict.css
@@ -4,3 +4,15 @@
 	font-weight: 400;
 	color: #333;
 }
+.fa-fw {
+    width: 1.28571429em;
+    text-align: center;
+}
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
